@@ -1,25 +1,47 @@
-FROM tomcat:8.5-jdk8-openjdk
-MAINTAINER geosolutions<info@geo-solutions.it>
+FROM tomcat:9-jdk11-openjdk AS mother
+LABEL maintainer="Alessandro Parma<alessandro.parma@geosolutionsgroup.com>"
+ARG MAPSTORE_WEBAPP_SRC="https://github.com/geosolutions-it/MapStore2/releases/latest/download/mapstore.war"
+ADD "${MAPSTORE_WEBAPP_SRC}" "/mapstore/"
+
+COPY ./docker/* /mapstore/docker/
+WORKDIR /mapstore
+
+FROM tomcat:9-jdk11-openjdk
 
 # Tomcat specific options
 ENV CATALINA_BASE "$CATALINA_HOME"
-ENV JAVA_OPTS="${JAVA_OPTS}  -Xms512m -Xmx512m -XX:MaxPermSize=128m"
+ENV MAPSTORE_WEBAPP_DST="${CATALINA_BASE}/webapps"
+ENV INITIAL_MEMORY="512m"
+ENV MAXIMUM_MEMORY="512m"
+ENV JAVA_OPTS="${JAVA_OPTS} -Xms${INITIAL_MEMORY} -Xmx${MAXIMUM_MEMORY}"
 
-# Optionally remove Tomcat manager, docs, and examples
-ARG TOMCAT_EXTRAS=false
-RUN if [ "$TOMCAT_EXTRAS" = false ]; then \
-      find "${CATALINA_BASE}/webapps/" -delete; \
-    fi
-
-# Add war files to be deployed
-COPY docker/*.war "${CATALINA_BASE}/webapps/"
-
-# Geostore externalization template. Disabled by default
-COPY docker/geostore-datasource-ovr.properties "${CATALINA_BASE}/conf/"
-ARG GEOSTORE_OVR_OPT=""
-ENV JAVA_OPTS="${JAVA_OPTS} ${GEOSTORE_OVR_OPT}"
-
-# Set variable to better handle terminal commands
+ARG OVR=""
+# ENV GEOSTORE_OVR_OPT="-Dgeostore-ovr=file://${CATALINA_BASE}/conf/${OVR}"
+ARG DATA_DIR="${CATALINA_BASE}/datadir"
+ENV GEOSTORE_OVR_OPT=""
+ENV JAVA_OPTS="${JAVA_OPTS} ${GEOSTORE_OVR_OPT} -Ddatadir.location=${DATA_DIR}"
 ENV TERM xterm
+
+COPY --from=mother "/mapstore/mapstore.war" "${MAPSTORE_WEBAPP_DST}/mapstore.war"
+COPY --from=mother "/mapstore/docker" "${CATALINA_BASE}/docker/"
+
+RUN mkdir -p ${DATA_DIR}
+
+
+RUN cp ${CATALINA_BASE}/docker/wait-for-postgres.sh /usr/bin/wait-for-postgres
+
+RUN apt-get update \
+    && apt-get install --yes postgresql-client \
+    && apt-get clean \
+    && apt-get autoclean \
+    && apt-get autoremove -y \
+    && rm -rf /var/cache/apt/* \
+    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /usr/share/man/* \
+    && rm -rf /usr/share/doc/*
+
+WORKDIR ${CATALINA_BASE}
+
+VOLUME [ "${DATA_DIR}" ]
 
 EXPOSE 8080
